lesson11 video02 time 03:30

--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -25,6 +25,7 @@
                 id="as-guest"
                 name="as-guest"
                 class="username__as-guest-control"
+                type="checkbox"
             >
         </div>
     </div>
