--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -29,6 +29,10 @@
             >
         </div>
     </div>
+    <script src="./src/username.js"></script>
+    <script>
+        const username = new Username();
+    </script>
 </body>
 
 </html>
