lesson11 video02 time 07:55

--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -31,7 +31,7 @@
     </div>
     <script src="./src/username.js"></script>
     <script>
-        const username = new Username();
+        const username = new Username(document.querySelector('.username'));
     </script>
 </body>
 
