lesson11 video03 time 01:30

--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -58,8 +58,11 @@
         </div>
     </div>
     <script src="./src/username.js"></script>
+    <script src="./src/group-dropdown.js"></script>
     <script>
         const username = new Username(document.querySelector('.username'));
+
+        const groupDropdown = new GroupDropdown(document.querySelector('.group-dropdown'));
     </script>
 </body>
 
