lesson11 video04 time 18:10

--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -13,13 +13,15 @@
 
         .suggest__suggest-popup {
             position: absolute;
-            padding: 2px 4px;
+            padding: 4px 2px;
             border: 1px solid #333;
             background: #fff;
         }
 
         .suggest__suggest-popup-item {
-            margin: -2px 0;
+            cursor: pointer;
+            padding: 2px 2px;
+            margin: 0 -2px;
         }
 
         .suggest__suggest-popup-item:hover {
