--- a/lesson12/index.html
+++ b/lesson12/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>AJAX</h1>
     <article class="user">
         <button class="user__login">Войти</button>
     </article>
     <script>
-        
+        const request = new XMLHttpRequest();
+
+        request.open('GET', './user.json', false);
+
+        request.send();
+
+        console.log(request.responseText);
     </script>
 </body>
+
 </html>
