--- a/lesson12/index.html
+++ b/lesson12/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
 </head>
 
 <body>
-    <h1>AJAX</h1>
+    <h1>AJAX <i class="fa fa-graduation-cap" aria-hidden="true"></i></h1>
     <article class="user">
         <button class="user__login">Войти</button>
     </article>
