lesson13 video03 time 00:00

--- a/lesson13/index.html
+++ b/lesson13/index.html
@@ -18,41 +18,9 @@
     <button class="yet-another-request-button">
         Узнайте профессии
     </button>
+    <script src="./src/lib/request.js"></script>
     <script>
         const requestButton = document.querySelector('.request-button');
-
-        const noop = () => { };
-
-        function request({
-            method = 'GET',
-            url,
-            type = 'json',
-            onSuccess = noop,
-            onError = noop
-        }) {
-            const req = new XMLHttpRequest();
-
-            req.open(method, url);
-            req.responseType = type;
-
-            req.onload = function (event) {
-                const target = event.target;
-
-                if (target.status !== 200) {
-                    onError(target.statusText);
-
-                    return;
-                }
-
-                onSuccess(target.response);
-            }
-
-            req.onerror = function () {
-                onError();
-            }
-
-            req.send();
-        }
 
         requestButton.addEventListener('click', () => {
             request({
