--- a/lesson13/geo.html
+++ b/lesson13/geo.html
@@ -21,6 +21,21 @@
         <i class="geo__loader geo__loader_hidden fa fa-spinner fa-pulse fa-fw"></i>
         <div class="geo__detect geo__detect_hidden"></div>
     </div>
+    <script>
+        const geo = document.querySelector('.geo');
+
+        const geoDetect = geo.querySelector('.geo__detect');
+        const geoDisplay = geo.querySelector('.geo__display');
+        const geoLoader = geo.querySelector('.geo__loader');
+
+        geoDetect.addEventListener('click', () => {
+            navigator.geolocation.getCurrentPosition((data) => {
+                const { latitude, longitude } = data.coords;
+
+                console.log(latitude, longitude);
+            });
+        });
+    </script>
 </body>
 
 </html>
