lesson13 video03 time 14:10

--- a/lesson13/geo.html
+++ b/lesson13/geo.html
@@ -41,9 +41,11 @@
 
                 request({
                     url: 'https://raw.githubusercontent.com/lutangar/cities.json/master/cities.json',
-                    onSuccess: () => {
+                    onSuccess: (data) => {
                         geoDetect.remove();
                         geoLoader.classList.add('geo__loader_hidden');
+
+                        console.log(data);
                     },
                     onError: () => {
                         geoDetect.removeAttribute('disbled');
